# photpatch

./: .gitignore  CMakeLists.txt  README.md  source.sh
cmd/: cmdbox.cc  cmdbox.h  cmds.cc  cmds.h  main.cc
conf/: exmple-patch.yaml
inc/: hotpatch.h
patch/: CMakeLists.txt  patch.c  patch.h
src/: arch.c  arch.h  config.cc  config.h  hotpatch.cc  hp_elf.cc  hp_elf.h  patch_yaml_def.h
util/: elog.cc  elog.h  util.cc  util.h
